<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DynamicDecisionSystem</string>
    <string name="camera_string">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera__log">Camera_Log</string>
    <string name="header_home">Home</string>
    <string name="button_log_new">Log New Item</string>
    <string name="button_edit_menu">View / Edit Menu</string>
    <string name="button_settings">Settings</string>
    <string name="button_camera">Take New Photo</string>
    <string name="button_back">Back</string>
    <string name="button_log">Log</string>
    <string name="image_cd_description">This is a generic content description</string>
    <string name="title_activity_decision__menu">Decision_Menu</string>
    <string name="header_start">Start</string>
    <string name="button_place">Place</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_insert">Insert</string>
    <string name="button_move">Move</string>
    <string name="button_delete">Delete</string>
    <string name="button_email">Email</string>
    <string name="title_activity_add__child">Add_Child</string>
    <string name="hello_world">Hello world!</string>
    <string name="header_add_child">Add New Menu Item</string>
    <string name="enter_name">Enter Name:</string>
    <string name="button_save">Save</string>
    <string name="button_home">Home</string>
    <string name="title_activity_insert__child">Insert_Child</string>
    <string name="title_activity_log__data">Log_Data</string>
    <string name="log_header">Log Data</string>
    <string name="volume">Volume Of Sample</string>
    <string name="colour">Colour Of Sample</string>

</resources>
