<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:text="@string/button_log_new"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerTextView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:background="#000"
        android:padding="5dp"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logimage"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/camera_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/image_camera"
                android:contentDescription="@string/image_cd_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"/>

            <Button
                android:id="@+id/button_camera"
                android:text="@string/button_camera"
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_log"
                android:text="@string/button_log"
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="logButtonClick"/>

            <Button
                android:id="@+id/button_back"
                android:text="@string/button_back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="backButtonClick"/>
            </LinearLayout>
    </ScrollView>

</LinearLayout>
