<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:text="@string/header_home"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerTextView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:background="#000"
        android:padding="5dp"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

    <Button
        android:id="@+id/logNewButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_log_new"
        android:layout_marginBottom="25dp"
        android:onClick="logNewItemClick"
        />

        <Button
            android:id="@+id/editMenuButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_menu"
            android:layout_marginBottom="25dp"
            android:onClick="menuClick"/>

    </LinearLayout>


</LinearLayout>
