<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.gmit.computing.dynamicdecisionsystem.Log_Data"
    android:orientation="vertical"
    android:background="@drawable/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_header"
        android:id="@+id/addChildTextView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:gravity="center"
        android:padding="5dp"
        android:background="#000"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name of Sample"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Time and Date"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/gpsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GPS Coordinates"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/imageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Image: None"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextVolume"
            android:text="@string/volume"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextColour"
            android:text="@string/colour"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNotes"
            android:text="Notes"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SaveBtn"
            android:text="Save and Email"
            android:onClick="saveLogClick"
            android:textColor="#459898"/>

        </LinearLayout>
</ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeBtn"
        android:text="@string/button_home"
        android:onClick="homeClick"
        android:textColor="#459898"/>

</LinearLayout>
